LPD-62312 test: move test to ObjectDefinitionTreeUtilTest